tests/neg/i8869.scala
val test1 = "".$asInstanceOf$[Int] // error
val test2 = "".$isInstanceOf$[Int] // error
